<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Application Info Query</string>
    <string name="all_application">All Application</string>
    <string name="system_application">System Application</string>
    <string name="non_system_application">Non System Application</string>
    <string name="package_query">Package Query</string>
    <string name="activity_query">Activity Query</string>
    <string name="service_query">Service Query</string>
    <string name="broadcast_query">Broadcast Query</string>
    <string name="provider_query">Provider Query</string>
    <string name="query">Query</string>
    <string name="click_to_view">Click to view</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info_name">Name</string>
    <string name="info_version_name">Version Name</string>
    <string name="info_version_code">Version Code</string>
    <string name="info_package_name">Package Name</string>
    <string name="info_shared_user_id">Shared User Id</string>
    <string name="info_base_revision_code">Base Revision Code</string>
    <string name="info_first_install_time">First Install Time</string>
    <string name="info_last_update_time">Last Update Time</string>
    <string name="info_gids">Gids</string>
    <string name="info_install_location">Install Location</string>
    <string name="info_shared_user_label">Shared User Label</string>
    <string name="info_config_preferences">Config Preferences</string>
    <string name="info_feature_groups">Feature Groups</string>
    <string name="info_permissions">Permissions</string>
    <string name="info_instrumentation">Instrumentation</string>
    <string name="info_providers">Providers</string>
    <string name="info_activities">Activities</string>
    <string name="info_receivers">Receivers</string>
    <string name="info_applicationInfo">Application Info</string>
    <string name="info_services">Services</string>
    <string name="info_requested_permissions">Requested Permission</string>
    <string name="info_requested_permissions_flags">Requested Permissions Flags</string>
    <string name="info_signatures">Signatures</string>
    <string name="info_split_names">Split Names</string>
    <string name="info_split_revision_codes">Split Revision Codes</string>
    <string name="info_core_app">Core App</string>
    <string name="info_required_for_all_users">Required For All Users</string>
    <string name="info_restricted_account_type">Restricted Account Type</string>
    <string name="info_required_account_type">Required account type</string>
    <string name="info_overlay_target">Overlay Target</string>
    <string name="head_gids">"Gids: "</string>
    <string name="head_split_revision_codes">"Split Revision Code: "</string>
    <string name="head_split_names">"Split Names: "</string>
    <string name="head_requested_permissions">"Requested Permissions: "</string>
    <string name="head_requested_permissions_flags">"Requested Permissions Flags: "</string>
    <string name="head_config_preferences">"ConfigPreferences "<xliff:g id="index">%d</xliff:g>": "</string>
    <string name="head_gl_es_version">"\tGlEsVersion: "<xliff:g id="name">%s</xliff:g></string>
    <string name="head_req_gl_es_version">"\tReqGlEsVersion: "<xliff:g id="version">%d</xliff:g></string>
    <string name="head_req_input_features">"\tReqInputFeatures: "<xliff:g id="value">%d</xliff:g></string>
    <string name="head_req_keyboard_type">"\tReqKeyboardType: "<xliff:g id="value">%d</xliff:g></string>
    <string name="head_req_navigation">"\tReqKeyboardType: "<xliff:g id="value">%d</xliff:g></string>
    <string name="head_req_touch_screen">"\tReqTouchScreen: "<xliff:g id="value">%d</xliff:g></string>
    <string name="head_feature_group">"FeatureGroup "<xliff:g id="index">%d</xliff:g>": "</string>
    <string name="head_feature_info">"\tFeatureInfo "<xliff:g id="index">%d</xliff:g>": "</string>
    <string name="head_name">"Name: "<xliff:g id="index">%s</xliff:g>": "</string>
    <string name="head_flags">"Flags: "<xliff:g id="value">%d</xliff:g></string>
    <string name="head_version">"Version: "<xliff:g id="value">%d</xliff:g></string>
    <string name="head_permission">"Permission "<xliff:g id="index">%d</xliff:g>": "</string>
    <string name="head_description">"Description: "<xliff:g id="value">%s</xliff:g></string>
    <string name="head_protection_level">"Protection Level: "<xliff:g id="value">%s</xliff:g></string>
    <string name="uninstall">Uninstall</string>
    <string name="show_top_activity">Show Top Activity</string>
    <string name="hide_top_activity">Hide Top Activity</string>
    <string name="open">Open</string>
    <string name="top_application_name">"Aplication Name: "<xliff:g id="name">%s</xliff:g></string>
    <string name="top_application_packagename">"Package Name: "<xliff:g id="name">%s</xliff:g></string>
    <string name="top_application_classname">"Class Name: "<xliff:g id="name">%s</xliff:g></string>
    <string name="application_not_found">Application Not Found</string>
    <string name="load_msg">Loading...</string>
    <string name="unknown_applicatin_name">Unknown Application Name</string>
    <string name="not_found_launcher_activity">Not Found Launcher Activity</string>
    <string name="found_application_toast_msg"><xliff:g id="count">%d</xliff:g>" applications found"</string>
    <string name="start_application">Start Application</string>
    <string name="enabled_application">Enabled Application</string>
    <string name="disabled_application">Disabled Application</string>
    <string name="uninstall_application">Uninstall Application</string>
    <string name="copy_application">Copy Application</string>
    <string name="copy_application_msg">"Application has been copied to "<xliff:g id="path">%s</xliff:g></string>
    <string name="copy_fail">Copy Fail</string>
    <string name="copy_success">Copy Success</string>
    <string name="copy_msg">Copying...</string>
    <string name="package_info">Package Info</string>
    <string name="application_info">Application Info</string>
    <string name="activity_info">Activities</string>
    <string name="service_info">Services</string>
    <string name="broadcast_info">Broadcasts</string>
    <string name="provider_info">Providers</string>
    <string name="install_application">Install Application</string>
    <string name="select_apk_file">Select Apk File</string>
    <string name="no_files_selected">No files selected</string>
    <string name="invalid_file">Invalid file</string>
    <string name="package_name">Package Name</string>
    <string name="not_find_package">"The package named "<xliff:g id="package_name">%s</xliff:g>" was not found"</string>
    <string name="no_package_info">No PackageInfo Infomation</string>
    <string name="package_info_title"><xliff:g id="name">%s</xliff:g>" PackageInfo"</string>
    <string name="user_mode">User Mode</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="package_list_empty_text">"没有找到应用"</string>
    <string name="all_application_title">"所有应用"</string>
    <string name="system_application_title">"系统应用"</string>
    <string name="non_system_application_title">"非系统应用"</string>
    <string name="unknown_name">"未知应用名称"</string>
    <string name="not_find_launcher_activity">"没有启动活动"</string>
    <string name="stop_application">"停止应用"</string>
    <string name="clear_application_data">"清除数据"</string>
    <string name="clear_application_cache">"清除缓存"</string>
    <string name="application_info_title">"应用信息"</string>
    <string name="activity_info_title">"Activitys信息"</string>
    <string name="service_info_title">"Services信息"</string>
    <string name="broadcast_info_title">"Broadcasts信息"</string>
    <string name="provider_info_title">"Providers信息"</string>
    <string name="application_info_activity_title"><xliff:g id="title">%s</xliff:g>"应用信息"</string>
    <string name="no_application_info_empty_text">"无法获取应用信息"</string>
    <string name="application_name">"应用名称"</string>
    <string name="version">"版本号"</string>
    <string name="shared_user_id">"共享用户ID"</string>
    <string name="launcer_activity">"启动活动"</string>
    <string name="first_install_time">"首次安装时间"</string>
    <string name="last_update_time">"上次更新时间"</string>
    <string name="base_revision_code">"基础修订代码"</string>
    <string name="install_location">"安装位置"</string>
    <string name="unknown_install_location">"未知安装位置"</string>
    <string name="install_location_auto">"系统自动选择"</string>
    <string name="install_location_internal_only">"仅系统存储"</string>
    <string name="install_location_prefer_eternal">"优先外部存储"</string>
    <string name="shared_user_label">"共享用户标签"</string>
    <string name="permissions">"权限"</string>
    <string name="back_up_agent_name">"备份代理名称"</string>
    <string name="application_class_name">"Application类名"</string>
    <string name="data_dir">"数据目录"</string>
    <string name="device_protected_data_dir">"设备保护数据目录"</string>
    <string name="manage_space_activity_name">"管理空间活动名称"</string>
    <string name="native_library_dir">"本地库文件目录"</string>
    <string name="process_name">"进程名称"</string>
    <string name="public_source_dir">"公共资源目录"</string>
    <string name="source_dir">"资源目录"</string>
    <string name="task_affinity">"任务栈名"</string>
    <string name="min_sdk_version">"支持最低Android版本"</string>
    <string name="compatible_width_limit_dp">"支持最低屏幕密度"</string>
    <string name="decription_res">"资源描述"</string>
    <string name="description">"描述"</string>
    <string name="enabled">"Enabled"</string>
    <string name="flags">"标志位"</string>
    <string name="largest_width_limit_dp">"支持最大屏幕密度"</string>
    <string name="require_smallest_width_dp">"要求最小屏幕密度"</string>
    <string name="uid">UID</string>
    <string name="theme">"主题"</string>
    <string name="feature">"功能"</string>
    <string name="activities_list_title"><xliff:g id="title">%s</xliff:g>"活动列表"</string>
    <string name="activity_list_empty_text">"没有找到活动"</string>
    <string name="services_list_title"><xliff:g id="title">%s</xliff:g>"服务列表"</string>
    <string name="service_list_empty_text">"没有找到服务"</string>
    <string name="broadcast_list_title"><xliff:g id="title">%s</xliff:g>"广播列表"</string>
    <string name="broadcast_list_empty_text">"没有找到广播"</string>
    <string name="provider_list_title"><xliff:g id="title">%s</xliff:g>"内容提供器列表"</string>
    <string name="provider_list_empty_text">"没有找到内容提供器"</string>
    <string name="no_activity_info_empty_text">"没有活动信息"</string>
    <string name="activity_info_activity_title"><xliff:g id="title">%s</xliff:g>"活动信息"</string>
    <string name="class_name">"类名"</string>
    <string name="target_activity">"目标活动"</string>
    <string name="parent_activity_name">"父活动"</string>
    <string name="no_broadcast_info_empty_text">"没有广播信息"</string>
    <string name="broadcast_info_activity_title"><xliff:g id="title">%s</xliff:g>"广播信息"</string>
    <string name="config_changes">"配置改变"</string>
    <string name="document_launch_mode">"文件启动模式"</string>
    <string name="launch_mode">"启动模式"</string>
    <string name="max_recents">"最大任务数量"</string>
    <string name="persistable_mode">"持久模式"</string>
    <string name="screen_orientation">"屏幕方向"</string>
    <string name="soft_input_mode">"输入法模式"</string>
    <string name="theme_resource">"主题资源"</string>
    <string name="ui_options">"界面选项"</string>
    <string name="window_layout">"窗口布局"</string>
    <string name="banner">"标题"</string>
    <string name="description_res">"资源描述"</string>
    <string name="direct_boot_awre">"直接启动到"</string>
    <string name="exported">"外部是否可以调用"</string>
    <string name="banner_resource">"标题资源"</string>
    <string name="icon_resource">"图标资源"</string>
    <string name="logo_resource">"Logo资源"</string>
    <string name="icon">"图标"</string>
    <string name="action">Action</string>
    <string name="category">Category</string>
</resources>