<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/package_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:text="@string/package_info"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/application_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:text="@string/application_info"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/activity_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:text="@string/activity_info"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/service_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:text="@string/service_info"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/broadcast_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:text="@string/broadcast_info"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/provider_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:text="@string/provider_info"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>