<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/applications_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:textAllCaps="false"
            android:text="@string/application_info_title"/>

        <Button
            android:id="@+id/activities_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:textAllCaps="false"
            android:text="@string/activity_info_title"/>

        <Button
            android:id="@+id/services_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:textAllCaps="false"
            android:text="@string/service_info_title"/>

        <Button
            android:id="@+id/broadcasts_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:textAllCaps="false"
            android:text="@string/broadcast_info_title"/>

        <Button
            android:id="@+id/providers_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:layout_marginLeft="@dimen/main_button_margin_left"
            android:layout_marginRight="@dimen/main_button_margin_right"
            android:textAllCaps="false"
            android:text="@string/provider_info_title"/>

    </LinearLayout>
</ScrollView>